second commit(updated)

--- a/Queen.html
+++ b/Queen.html
@@ -5,7 +5,7 @@
     <title>
         Queen-chess-board using JavaScript
     </title>
-    <script src="Queen(chess).js"></script>
+    <script src="Queen.js"></script>
 </head>
 
 <body align="center">
